# webrender

webrender/: Cargo.toml
webrender/src/: batch.rs  lib.rs  resource_cache.rs
webrender/src/renderer/: init.rs  mod.rs
wr_glyph_rasterizer/: Cargo.toml  README.md
wr_glyph_rasterizer/examples/: basic.rs
wr_glyph_rasterizer/examples/common/: boilerplate.rs
wr_glyph_rasterizer/src/: gamma_lut.rs  lib.rs  rasterizer.rs  telemetry.rs  types.rs
wr_glyph_rasterizer/src/platform/macos/: font.rs
wr_glyph_rasterizer/src/platform/unix/: font.rs
wr_glyph_rasterizer/src/platform/windows/: font.rs
