[package]
name = "wr_glyph_rasterizer"
version = "0.0.1"
authors = ["The Servo Project Developers"]
repository = "https://github.com/servo/webrender"
description = "A glyph rasterizer for webrender"
license = "MIT/Apache-2.0"
edition = "2018"

[features]
capture = ["api/serialize", "serde", "smallvec/serde"]
replay = ["api/deserialize", "serde", "smallvec/serde"]
no_static_freetype = []

[dependencies]
api = { version = "0.62.0", path = "../webrender_api", package = "webrender_api" }
euclid = { version = "0.22.0", features = ["serde"] }
malloc_size_of = { version = "0.0.2", path = "../wr_malloc_size_of", package = "wr_malloc_size_of" }
malloc_size_of_derive = "0.1"
rayon = "1"
smallvec = "1"
tracy-rs = "0.1.2"
log = "0.4"
lazy_static = "1"
fxhash = "0.2.1"
webrender_build = { version = "0.0.2", path = "../webrender_build" }
glean = "51.8.2"
serde = { optional = true, version = "1.0", features = ["serde_derive"] }

[target.'cfg(any(target_os = "android", all(unix, not(target_os = "macos"))))'.dependencies]
freetype = { version = "0.7", default-features = false }
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
dwrote = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.2"
core-graphics = "0.22.3"
core-text = { version = "19.2", default-features = false }
objc = "0.2"

[dev-dependencies]
app_units = "0.7"
env_logger = "0.9"
euclid = "0.22"
gleam = "0.14"
glutin = "0.29"
rayon = "1"
winit = "0.27"

[target.'cfg(target_os = "macos")'.dev-dependencies]
core-foundation = "0.7"
